Switching from Edge Slide to Move and Cancelling causes crash #74044

Closed
opened 2020-02-20 16:51:31 +01:00 by Julien Kaspar · 7 comments
Member

System Information
Operating system: Linux-5.3.0-40-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.48.02

Blender Version
Broken: version: 2.83 (sub 4), branch: master, commit date: 2020-02-20 04:40, hash: 2a6df7dfe5

Short description of error
When using the Edge Slide Tool or modal operator, the user can press G/R/S to switch to a different transform operation.
When trying to cancel the move operation it causes Blender to crash.

Exact steps for others to reproduce the error

  • Select an Edge
  • Press G twice to go into Edge Slide (Or use the edge slide tool)
  • Press G again to switch to Move Transform
  • Press Esc or Right Click to cancel
**System Information** Operating system: Linux-5.3.0-40-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.48.02 **Blender Version** Broken: version: 2.83 (sub 4), branch: master, commit date: 2020-02-20 04:40, hash: `2a6df7dfe5` **Short description of error** When using the Edge Slide Tool or modal operator, the user can press G/R/S to switch to a different transform operation. When trying to cancel the move operation it causes Blender to crash. **Exact steps for others to reproduce the error** - Select an Edge - Press G twice to go into Edge Slide (Or use the edge slide tool) - Press G again to switch to Move Transform - Press Esc or Right Click to cancel
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Member

Added subscribers: @mano-wii, @lichtwerk

Added subscribers: @mano-wii, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, checking...
Also getting the following:

BLI_assert failed: /blender/editors/transform/transform_mode_edge_slide.c:113, edgeSlideFirstGet(), at '!"Should never happen, at least one EdgeSlideData should be valid"'

Can confirm, checking... Also getting the following: > BLI_assert failed: /blender/editors/transform/transform_mode_edge_slide.c:113, edgeSlideFirstGet(), at '!"Should never happen, at least one EdgeSlideData should be valid"'
Member

Caused by a33b261473

Caused by a33b261473
Germano Cavalcante was assigned by Philipp Oeser 2020-02-21 13:08:29 +01:00

This issue was referenced by 0c506a6ef0

This issue was referenced by 0c506a6ef0b7a1cf1ca267151e01da1e87b89e54

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74044
No description provided.